docs: fix remaining broken links (auth/quickstarts)

--- a/docs/postman.mdx
+++ b/docs/postman.mdx
@@ -117,6 +117,6 @@ If data hasn’t changed, the API returns **304 Not Modified**. This saves bandw
 
 ## Next steps
 
-- Code samples: [Getting Started → Quickstarts](/docs/getting-started/quickstarts)  
+- Code samples: [Getting Started → Quickstarts](/docs/quickstarts)  
 - Prefer Insomnia? See [Insomnia](/docs/insomnia)  
 - Explore the full schema in [API Reference](/docs/api-reference/endpoints)
