docs(sidebar): align doc IDs with front-matter; fix canonical slugs

--- a/docs/insomnia.mdx
+++ b/docs/insomnia.mdx
@@ -1,4 +1,6 @@
 ---
+id: insomnia
+slug: /insomnia
 title: Insomnia Setup
 sidebar_position: 3
 ---
@@ -40,7 +42,7 @@ Learn how to use Insomnia REST client with the PortPulse API for testing and dev
 ```json
 {
   "baseUrl": "https://api.useportpulse.com/v1",
-  "apiKey": "your_api_key_here"
+  "apiKey": "dev_demo_123"
 }
 ```
 
