--- a/docs/postman.mdx
+++ b/docs/postman.mdx
@@ -13,7 +13,7 @@ Use this guide to import the **PortPulse OpenAPI**, configure an **API Key** hea
 
 - **Base URL**: `https://api.useportpulse.com`  
 - **Demo key**: `dev_demo_123`  
-- **Auth header**: `X-API-Key: <YOUR_KEY>`  
+- **Auth header**: `X-API-Key: <dev_demo_123>`  
 - **Formats**: JSON & CSV (CSV supports strong **ETag/304**)
 
 ---
