docs: proxy /openapi.json via redirects only; remove prebuild & static schema; clean build

--- a/docs/postman.mdx
+++ b/docs/postman.mdx
@@ -67,7 +67,7 @@ Use the trend endpoint:
 **Request**
 
 ```
-GET {{baseUrl}}/v1/ports/USLAX/trend?window=14d
+GET {{baseUrl}}/v1/ports/USLAX/trend?window=14
 Header: X-API-Key: {{apiKey}}
 ```
 
