--- a/docs/insomnia.mdx
+++ b/docs/insomnia.mdx
@@ -19,14 +19,14 @@ Learn how to use Insomnia REST client with the PortPulse API for testing and dev
 
 ### Method 1: Import from URL
 1. Click **Create** → **Import from URL**
-2. Enter: `https://api.useportpulse.com/v1/openapi.json`
+2. Enter: `https://api.useportpulse.com/openapi.json`
 3. Click **Import**
 4. Select "OpenAPI 3.0" format when prompted
 
 ### Method 2: Import from File
 1. Download the OpenAPI spec:
    ```bash
-   curl -o portpulse-openapi.json https://api.useportpulse.com/v1/openapi.json
+   curl -o portpulse-openapi.json https://api.useportpulse.com/openapi.json
    ```
 2. In Insomnia: **Create** → **Import from File**
 3. Select the downloaded `portpulse-openapi.json`
@@ -98,7 +98,7 @@ Expected response:
 
 ### Request CSV Format
 ```http
-GET &#123;&#123; _.baseUrl &#125;&#125;/ports/USLAX/trend?window=30d&format=csv
+GET &#123;&#123; _.baseUrl &#125;&#125;/ports/USLAX/trend?window=30&format=csv
 X-API-Key: &#123;&#123; _.apiKey &#125;&#125;
 ```
 
@@ -112,7 +112,7 @@ X-API-Key: &#123;&#123; _.apiKey &#125;&#125;
 1. Copy the ETag value from the previous response
 2. Create a new request with:
    ```http
-   GET &#123;&#123; _.baseUrl &#125;&#125;/ports/USLAX/trend?window=30d&format=csv
+   GET &#123;&#123; _.baseUrl &#125;&#125;/ports/USLAX/trend?window=30&format=csv
    X-API-Key: &#123;&#123; _.apiKey &#125;&#125;
    If-None-Match: "abc123def456"
    ```
@@ -122,7 +122,7 @@ X-API-Key: &#123;&#123; _.apiKey &#125;&#125;
 
 ### Port Trends (JSON)
 ```http
-GET &#123;&#123; _.baseUrl &#125;&#125;/ports/USLAX/trend?window=30d&format=json
+GET &#123;&#123; _.baseUrl &#125;&#125;/ports/USLAX/trend?window=30&format=json
 X-API-Key: &#123;&#123; _.apiKey &#125;&#125;
 ```
 
