--- a/docs/postman.mdx
+++ b/docs/postman.mdx
@@ -120,3 +120,9 @@ If data hasn’t changed, the API returns **304 Not Modified**. This saves bandw
 - Code samples: [Getting Started → Quickstarts](/docs/quickstarts)  
 - Prefer Insomnia? See [Insomnia](/docs/insomnia)  
 - Explore the full schema in [API Reference](/docs/api-reference/endpoints)
+
+## Download collection
+- 👉 **[Download Postman Collection](/postman/portpulse.postman_collection.json)**
+- Or use the docs copy of OpenAPI: **https://docs.useportpulse.com/openapi.json**
+- In Postman: *Import → File/Link* and choose **Collection**.
+
